# CapabilityReconstructionGraph

./: .gitignore  CMakeLists.txt  CRG_STATE.md  LICENSE  NOTICE  README.md  init_project.sh  make_breakeven_img.py  make_cppcon_slides.sh  make_tensor_img.py  make_tensor_routing_dark_img.py
benchmarks/: compile_and_run.sh  crg_bench_runner  crg_benchmark  crg_benchmark.cpp  crg_benchmark_architect.cpp  crg_benchmark_architect.csv  crg_benchmark_architect.py  crg_benchmark_bar  crg_benchmark_bar.cpp  crg_benchmark_bar.csv  crg_benchmark_bar.py  crg_benchmark_final.cpp  crg_benchmark_final.csv  crg_benchmark_final.py  crg_compare_perf.cpp  crg_compare_perf.py  ecs_sim_benchmark  plot_breakeven.py  plot_results.py  plot_tensor_3d.py  plot_tensor_routing_dark.py  results.csv  run_all.py  run_bench.py  run_bench.sh  run_compare.py  run_single.sh
canon/: CANON.md
cppcon/: CRG_Talk_EN.pptx  CRG_Talk_FR.pptx  cppcon_pitch.txt  cppcon_talk.md  generate_decks.py
demo/: 01_list.cpp  02_identity.cpp  03_lookup.cpp  04_definitions.cpp  05_fusion.cpp  build_release.bat  build_release.sh  cgr_stage11_dynamic_rules.cpp  crg_linkednode_v0.cpp  crg_stage00_baseline.cpp  crg_stage00_godregistry.cpp  crg_stage01_behaviornode.cpp  crg_stage01_intrusive_infrastructure.cpp  crg_stage01_linkednode.cpp  crg_stage02_identity.cpp  crg_stage02_opaque_transport.cpp  crg_stage03_traversal_lookup.cpp  crg_stage04_behavior_space.cpp  crg_stage04_identity_decoupling.cpp  crg_stage05_fusion.cpp  crg_stage05_model_router.cpp  crg_stage05_projection.cpp  crg_stage06_fusion.cpp  crg_stage0_baseline.cpp  (+28 more)
(+17 files in other folders)
